# anchor_program_test

./: Anchor.toml
programs/test-dapps/: Cargo.toml
programs/test-dapps/src/: lib.rs
programs/test-dapps/tests/: lib.rs
tests/: test-dapps.ts
