[package]
name = "test-dapps"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_dapps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"

[dev-dependencies]
solana-program-test = "1.9.8"
tokio = "1.17.0"
solana-sdk = "1.10.0"
